--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Poppins;
 }
 h1,h2,h3,h4,h5,h6{
   margin: 0;
   padding: 0;
 }
 p{
-  margin: 0;
+  margin: 0 0;
   padding: 0;
 }
 ul{
@@ -81,4 +82,127 @@ iframe{
   border: 1px solid grey;
   color: white;
   font-weight: 600
+}
+.sidebar-section{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-width: 200px;
+  max-width: 200px;
+  height: 100vh;
+  background-color: #F8FAFB;
+}
+.sidebar-wrapper{
+  padding: 20px;
+}
+.sidebar-logo img{
+  width: 140px;
+  cursor: pointer;
+}
+.side-menubar{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.menu{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 10px;
+  column-gap: 8px;
+  text-decoration: none;
+}
+.menu.active{
+  background-color: #DC2C1D;
+  padding: 10px;
+  border-radius: 5px;
+  
+}
+.menu.active span{
+  color: #FFFFFF;
+}
+
+.menu span{
+  color: #25262B;
+  font-size: 13px;
+}
+.menu img{
+  width: 18px;
+}
+.dashboard-container{
+  width: calc(100% - 220px);
+  margin-left: auto;
+  padding: 0px 20px;
+}
+.header-section{
+  padding: 20px 20px 20px 0px;
+}
+.header-section-wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-text{
+  display: flex;
+  flex-direction: column;
+}
+.header-text h2{
+  font-size: 20px;
+  font-weight: 600;
+}
+.header-text p{
+  color: #373737;
+  font-size: 14px;
+  font-weight: 300;
+}
+.header-text span{
+  color: #000;
+  font-weight: 400;
+}
+.header-left{
+  width: 100%;
+  min-width: 65%;
+  max-width: 65%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-right{
+  display: flex;
+  width: 100%;
+  max-width: 30%;
+  min-width: 30%;
+  justify-content: right;
+  align-items: center;
+  column-gap: 30px;
+}
+.profile-info{
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  align-items: center;
+
+}
+.header-right .notify-btn{
+  width: 40px;
+  height: 40px;
+}
+.profile-img{
+  border: 1px solid black;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.profile-img img{
+  width: 35px;
+  height: 35px;
+}
+.profile-info p{
+  font-size: 12px;
+  font-weight: 500;
 }
