--- a/src/View/Home/Home.css
+++ b/src/View/Home/Home.css
@@ -723,3 +723,13 @@ margin-bottom: 30px;
     color: rgba(190, 190, 190, 1);
     font-size: 18px;
   }
+  @media(max-width:1400px){
+    .right_phone{
+      width: 100%;
+      max-width: 58%;
+      min-width: 58%;
+    }
+    .home_container_wrapper{
+      column-gap: 20px;
+    }
+  }
